chore: harden Codex Cloud test job

--- a/codex.yaml
+++ b/codex.yaml
@@ -1,5 +1,6 @@
 jobs:
   tests:
-    run: ./scripts/setup-env.sh pytest
+    timeout: 40m
+    run: ./scripts/setup-env.sh bash -lc 'if command -v uv >/dev/null 2>&1; then uv sync && uv run pytest; else pip install -e .[dev] && pytest; fi'
     env:
       GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
