--- a/.github/workflows/coderabbit-auto-merge.yml
+++ b/.github/workflows/coderabbit-auto-merge.yml
@@ -39,7 +39,12 @@ jobs:
             });
             const mergeableState = prDetails.data.mergeable_state;
             const mergeableFlag = prDetails.data.mergeable;
-            if (!mergeableFlag || !["clean", "has_hooks", "stable"].includes(mergeableState)) {
+            const allowedStates = ["clean", "has_hooks", "stable"];
+            if (!allowedStates.includes(mergeableState)) {
+              core.warning(`PR mergeable_state=${mergeableState} mergeable=${mergeableFlag}; skipping auto-merge enablement until GitHub reports a stable state.`);
+              return;
+            }
+            if (mergeableFlag === false && mergeableState !== "has_hooks") {
               core.warning(`PR mergeable_state=${mergeableState} mergeable=${mergeableFlag}; skipping auto-merge enablement until GitHub reports a stable state.`);
               return;
             }
