--- a/.github/workflows/coderabbit-auto-merge.yml
+++ b/.github/workflows/coderabbit-auto-merge.yml
@@ -65,8 +65,32 @@ jobs:
             }
 
             const allowedStates = ["clean", "has_hooks", "stable", "behind"];
+            const transientStates = (process.env.AUTO_MERGE_TRANSIENT_STATES || "unstable")
+              .split(",")
+              .map((state) => state.trim())
+              .filter(Boolean);
+
+            const shouldRetryState = () => transientStates.includes(mergeableState);
+            for (let attempt = 1; !allowedStates.includes(mergeableState) && shouldRetryState() && attempt <= maxRetries; attempt += 1) {
+              core.info(
+                `mergeable_state=${mergeableState} not yet allowed; retry ${attempt}/${maxRetries} after ${retryDelayMs}ms.`
+              );
+              await new Promise((resolve) => setTimeout(resolve, retryDelayMs));
+              try {
+                prDetails = await fetchMergeability();
+              } catch (error) {
+                const message = error.errors?.map((e) => e.message).join('; ') || error.message;
+                core.warning(`Retry ${attempt} failed to fetch mergeability: ${message}. Will retry on the next approval event.`);
+                return;
+              }
+              mergeableState = prDetails.data.mergeable_state;
+              mergeableFlag = prDetails.data.mergeable;
+            }
+
             if (!allowedStates.includes(mergeableState)) {
-              core.warning(`PR mergeable_state=${mergeableState} mergeable=${mergeableFlag}; skipping auto-merge enablement until GitHub reports a stable state.`);
+              core.warning(
+                `PR mergeable_state=${mergeableState} mergeable=${mergeableFlag}; skipping auto-merge enablement until GitHub reports a stable state.`
+              );
               return;
             }
             if (mergeableFlag === null) {
