--- a/.github/workflows/coderabbit-auto-merge.yml
+++ b/.github/workflows/coderabbit-auto-merge.yml
@@ -47,8 +47,8 @@ jobs:
 
             let mergeableState = prDetails.data.mergeable_state;
             let mergeableFlag = prDetails.data.mergeable;
-            const retryDelayMs = Number(process.env.AUTO_MERGE_MERGEABLE_DELAY_MS || 3000);
-            const maxRetries = Number(process.env.AUTO_MERGE_MERGEABLE_RETRIES || 3);
+            const retryDelayMs = Number(process.env.AUTO_MERGE_MERGEABLE_DELAY_MS || 5000);
+            const maxRetries = Number(process.env.AUTO_MERGE_MERGEABLE_RETRIES || 6);
 
             for (let attempt = 1; mergeableFlag === null && attempt <= maxRetries; attempt += 1) {
               core.info(`mergeability still computing (state=${mergeableState}); retry ${attempt}/${maxRetries} after ${retryDelayMs}ms.`);
@@ -92,15 +92,18 @@ jobs:
               return;
             }
             const isAllowedState = allowedStates.includes(mergeableState);
-            const isTransientButMergeable = transientStates.includes(mergeableState) && mergeableFlag === true;
-            if (!isAllowedState && !isTransientButMergeable) {
-              core.warning(
-                `PR mergeable_state=${mergeableState} mergeable=${mergeableFlag}; skipping auto-merge enablement until GitHub reports a stable state.`
-              );
+            const isTransientState = transientStates.includes(mergeableState);
+            if (!isAllowedState) {
+              if (isTransientState) {
+                core.setFailed(
+                  `PR mergeable_state=${mergeableState} still transient after ${maxRetries} retries; rerun once GitHub marks it clean.`
+                );
+              } else {
+                core.warning(
+                  `PR mergeable_state=${mergeableState} mergeable=${mergeableFlag}; skipping auto-merge enablement until GitHub reports a stable state.`
+                );
+              }
               return;
-            }
-            if (isTransientButMergeable) {
-              core.info(`mergeable_state=${mergeableState} reported with mergeable=true; proceeding with auto-merge enablement.`);
             }
             if (mergeableFlag === false && !["has_hooks", "behind"].includes(mergeableState)) {
               core.warning(`PR mergeable_state=${mergeableState} mergeable=${mergeableFlag}; skipping auto-merge enablement until GitHub reports a stable state.`);
