--- a/.github/workflows/coderabbit-auto-merge.yml
+++ b/.github/workflows/coderabbit-auto-merge.yml
@@ -25,14 +25,17 @@ jobs:
     steps:
       - name: Enable GitHub auto-merge
         uses: actions/github-script@v7
+        env:
+          DISPATCH_PR_NUMBER: ${{ github.event.inputs.pull_request }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const pr = context.payload.pull_request;
             const dispatchInput = github?.event?.inputs?.pull_request;
+            const envDispatch = process.env.DISPATCH_PR_NUMBER;
             const envInput = process.env.INPUT_PULL_REQUEST;
             const inputPrNumber = core.getInput ? core.getInput('pull_request') : undefined;
-            const prNumberRaw = pr?.number ?? dispatchInput ?? inputPrNumber ?? envInput;
+            const prNumberRaw = pr?.number ?? dispatchInput ?? inputPrNumber ?? envInput ?? envDispatch;
             const prNumber = prNumberRaw ? Number(prNumberRaw) : undefined;
             if (!prNumber || Number.isNaN(prNumber)) {
               core.setFailed('No pull request number available; provide `pull_request` input when dispatching manually.');
